--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,8 @@ lib_deps =
     256dpi/MQTT@^2.5.0
     arduino-libraries/NTPClient@^3.1.0
     knolleary/PubSubClient@^2.8
+    khoih-prog/Functional-Vlpp@~1.0.2
+
 build_flags =
     -DCORE_DEBUG_LEVEL=5
     -Iinclude
